# zvec-dart

./: .gitignore  .gitmodules  .metadata  .pubignore  README.md  README_zh.md  ffigen.yaml  pubspec.yaml
.github/workflows/: 1-build-and-release.yml  2-publish-pub-dev.yml  3-verify-package.yml  RELEASE_PIPELINE.md
android/: build.gradle  settings.gradle
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/zvec_example/: MainActivity.kt
example/lib/: main.dart
ios/: zvec.podspec
ios/Classes/: zvec.c
lib/: zvec.dart
lib/src/: collection.dart  collection_options.dart  collection_schema.dart  collection_stats.dart  config.dart  doc.dart  errors.dart  index_params.dart  query_params.dart  types.dart  vector_query.dart  zvec_bindings.dart  zvec_library.dart
scripts/: build_all.sh  build_android.sh  build_ios.sh  build_macos.sh  run_tests.sh
src/: CMakeLists.txt  zvec_plugin.c
test/: zvec_native_test.dart  zvec_test.dart
